--- a/conclusion.tex
+++ b/conclusion.tex
@@ -36,7 +36,7 @@
 %  * provide the simulation environment which facilitates correct computations,  and solves 
 %	  1) the artifacts from the near field around the structure being recorded by the monitor planes (--reformulate)
 %	  2) by mathematical means, the phase-ambiguity of the retrieved effective index by the s-parameter method 
-%  * proposes a novel function for a wave source in FDTD that has a flat-top spectrum in a well-defined 
+%  * proposes a novel time dependence for a wave source in FDTD that yields a flat-top spectrum in a well-defined 
 %		interval of frequencies
 %  * we developed an original apparatus for accurate sieving
 %	 for the fabrication of sieves, we constructed a laser micro-machining setup in the laboratory, 
@@ -53,9 +53,6 @@
 %		4) that probably no dielectric-only metamaterial can be built for permittivity contrast below 50
 %       5) origin of antiresonance observed in effective $\eeff(f)$ or $\meff(f)$, and its persistence in random structures
 
-%+ achievements <------- todo add
-	%+ When one can use N,
-	%+
 %+ Kramers-Kronig check of the RodArray spectrum (or some other?)
 
 
