--- a/intro.tex
+++ b/intro.tex
@@ -132,7 +132,7 @@ PhC 		& Photonic crystal\\
 %PML 		& Perfectly matched layers (absorber in simulation)\\
 PWEM 		& Plane-wave expansion method (algorithm)\\
 RHM 		& Right-Handed (Meta)Material\\ 
-SRR			& Split-ring resonator\\
+SRR			& Split-ring resonator\\			% todo add ESRR?
 STO			& Strontium titanate, SrTiO$_3$ (ferroelectric material)\\
 TDTS 		& Time-domain terahertz spectroscopy\\
 %TMM		& Transfer-matrix method  (numerical computation)\\
@@ -182,3 +182,6 @@ $h$ 		& Planck constant, $h = 6.626\cdot 10^{-34}$ J s\\
  \end{tabular} \end{table}
  %with a density $\rho$ and average velocity $\mathbf{v}(t)$
 %}}}
+
+
+ % TODO note about the field polarisation convention in most plots in the Results section
