--- a/result.tex
+++ b/result.tex
@@ -285,9 +285,9 @@ The symmetric resonator is represented by green curves. In Fig. \ref{fg_SRR_prin
 
 %}}}
 \paragraph{Antiresonances in local effective parameters}
-In the case of symmetric split-ring resonators, the first resonance possesses only the magnetic dipole moment. This fact can be intuitively deduced from a strong resonant behaviour of the permeability $\meff(f)$ (green curve in Fig. \ref{fg_SRR_principles}e, between 600 and 700 GHz). 
+In the case of symmetric split-ring resonators, the first resonance possesses only the magnetic dipole moment, as follows from the symmetry of the resonant fields. This fact reflects in a strong resonant behaviour of the permeability $\meff(f)$ (green curve in Fig. \ref{fg_SRR_principles}e, between 600 and 700 GHz). 
 
-The permittivity spectrum $\eeff(f)$ (Fig. \ref{fg_SRR_principles}d) is, however, also affected by the magnetic dipole resonance. Its impact on $\eeff(f)$ is several times weaker, and more importantly, it has an opposite sign than with $\meff(f)$, which is sometimes described as the \textit{antiresonance} in the literature \cite{wallen2011anti}. The real part of $\eeff'(f)$ is reduced at frequencies below the resonance, and increased above it. Simultaneously, the sign of the imaginary part $\eeff''(f)$ would imply amplification of the electric field oscillating around 650 GHz, which is impossible in a structure composed of lossy materials only.
+The permittivity spectrum $\eeff(f)$ (Fig. \ref{fg_SRR_principles}d) is, however, also affected by the magnetic dipole resonance. Its impact on $\eeff(f)$ is several times weaker, and more importantly, it has an opposite sign with regards to the resonance of $\meff(f)$, which is sometimes described as the \textit{antiresonance} in the literature \cite{wallen2011anti}. The real part of $\eeff'(f)$ is reduced at frequencies below the resonance, and increased above it. Simultaneously, the sign of the imaginary part $\eeff''(f)$ would imply amplification of the electric field oscillating around 650 GHz, which is impossible in a structure composed of lossy materials only.
 
 %Ref. \cite{li2009determination} contains typical complex-valued spectra of $\eeff$ and $\meff$ for a SRR and SRR-Wire
 % different orientations - some leading to chirality i.e. linear dependence of f(K)
