--- a/result.tex
+++ b/result.tex
@@ -357,14 +357,15 @@ Comparison of the more familiar standard SRR (split width $d=4$ $\mu$m) with a s
 
 \FloatBarrier %====================================================================================================
 \section{Combined electric and magnetic resonator} \label{section_srr} % references to -> 
-\paragraph{Effect of the }
+\paragraph{Effect of the central bar in SRR}
 The fundamental resonance of a split-ring resonator (SRR) is the magnetic one, where the current circulates around the circumference of the SRR. At higher frequencies, the SRR exhibits also the electric resonance, where the current flows symmetrically along whole SRR.
 
-By adding a central bar parallel to the electric field, i.e. along the $x$-axis, the frequency of the magnetic resonance does not significantly change due to the symmetry. However, a new kind of an electric resonance is introduced this way, in which the current conducted by the central bar has opposite direction than that conducted by both SRR arms. Like the original electric one, this resonance has an electric dipole, but its frequency is lower and similar to the frequency of the magnetic resonance.
+When one adds a central bar parallel to the electric field, i.e. along the $x$-axis, the frequency of the magnetic resonance does not change significantly. The reason is in that zero net current flows through the central bar due to the symmetry of magnetic resonance. However, a new kind of an resonance is introduced this way, in which the current conducted by the central bar has opposite direction than that conducted by both SRR arms. This is another electric resonance, but  its frequency is lower compared to the original electric resonance, and similar to the frequency of the magnetic resonance.
 
 \paragraph{Reducing the frequency of the asymmetric electric resonance}
-It was demonstrated in Fig. \ref{fg_CutWires_wireradius1u_cutwidth_comparison} that the electric resonance introduces a region in spectrum where the local effective permittivity has a physically meaningful negative value. Likewise, Fig. \ref{} $\meff(f)$
-By optimizing the structure geometry, the  
+It was demonstrated in the spectra of the cut wires (Fig. \ref{fg_CutWires_wireradius1u_cutwidth_comparison}) that the electric resonances introduce a region in spectrum where the local effective permittivity has a physically meaningful negative value. Likewise, the magnetic resonance introduces a region of $\meff(f) < 0$, as shown in the spectra in Fig. \ref{fg_SRR_principles}.
+
+By optimizing the structure geometry, the resonances can be tuned against each other so that the regions of $\eeff(f) < 0$ and $\meff(f) < 0$ overlap. %% TODO XXX 
 
 \paragraph{}
 
